learn more button

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <h1 id="helloworld"></h1>
                 <h2>I'm James,</h2>
                 <p>a computer science student</p>
-                <a href="aboutme.html">
-                    <button class="button">
+                <a>
+                    <button class="button" onclick="scrollToElement(2)">
                         <b>learn more</b>
                     </button>
                 </a>
@@ -87,15 +87,15 @@
                 about me:
             </h1>
             <div id="about-me-container">
-                <section id="about1">
-                    <p id="about-text" class="reveal">
+                <section id="about1" class="reveal">
+                    <p id="about-text" >
                         I'm a first year student at Rensselaer Polytechnic Institute studying computer science with experience in web design. I am fluent in:
                     </p>
-                    <img src="Languages.svg" class="reveal">
-                    <p id="about-text" class="reveal">
+                    <img src="Languages.svg" >
+                    <p id="about-text" >
                         I'm looking for either a front end or back end internship position. 
                     </p>
-                    <p id="contact" class="reveal">Contact me here: liuj43@rpi.edu</p>
+                    <p id="contact" >Contact me here: liuj43@rpi.edu</p>
                 </section>
             </div>
         </div>
