--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="index.js"></script>
         <link rel="shortcut icon" type="image/png" href="laptop-code.svg"/>
+
     </head>
 
     <body>
@@ -70,6 +71,15 @@
                     a sudoku website built completely from scratch in HTML, CSS, and Javascript.
                 </h3>
             </a>
+            <a href="miniBLAST.html" id="refresh-link" class="card reveal">
+                <h2 class="card-heading">
+                    miniBLAST algorithm
+                </h2>
+                <img src="code.svg">
+                <h3>
+                    a C++ algorithm that can perform genome look-up in almost O(1)
+                </h3>
+            </a>
             <a href="#" id="refresh-link" class="card reveal">
                 <h2 class="card-heading">
                     this website
@@ -79,7 +89,6 @@
                     designed in Figma and built from scratch in HTML, CSS and Javascript.
                 </h3>
             </a>
-
             </div>
         </div>
         <div class="about-me" id="about-me">
