--- a/miniBLAST.html
+++ b/miniBLAST.html
@@ -46,7 +46,7 @@
                 <ul>
                     <li><a href="index.html">
                         <button class="menu-button" >
-                            <b>projects</b>
+                            <b>projects1</b>
                         </button>
                     <li><a href="index.html">
                         <button class="menu-button" >
