--- a/miniBLAST.html
+++ b/miniBLAST.html
@@ -45,7 +45,7 @@
                 <ul>
                     <li><a href="index.html">
                         <button class="menu-button" >
-                            <b>projects1</b>
+                            <b>projects</b>
                         </button>
                     <li><a href="index.html">
                         <button class="menu-button" >
