--- a/miniBLAST.html
+++ b/miniBLAST.html
@@ -30,6 +30,7 @@
         <link rel="stylesheet" href="styles.css">
         <script src="index.js"></script>
         <script src="prism.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism-okaidia.min.css" />
         <link rel="stylesheet" href="prism.css">
         <link rel="shortcut icon" type="image/png" href="laptop-code.svg"/>
 
@@ -45,7 +46,7 @@
                 <ul>
                     <li><a href="index.html">
                         <button class="menu-button" >
-                            <b>projects</b>
+                            <b>projects1</b>
                         </button>
                     <li><a href="index.html">
                         <button class="menu-button" >
