--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div id="about-me-container">
                 <section id="about1" class="reveal">
                     <p id="about-text" >
-                        I'm a first year student at Rensselaer Polytechnic Institute studying computer science with experience in web design. I am fluent in:
+                        I'm a first year student at Rensselaer Polytechnic Institute studying computer science with experience in web design. I am experienced with:
                     </p>
                     <img src="Languages.svg" >
                     <p id="about-text" >
