--- a/index.html
+++ b/index.html
@@ -24,21 +24,27 @@
         <div class="teaser-image1"></div>
 
         <header class="header" id="header">
-            <nav>
-                <ul>
-                    <li><a onclick="scrollToElement(1)">
-                        <button class="menu-button" >
-                            <b>projects</b>
-                        </button>
-                    <li><a onclick="scrollToElement(2)">
-                        <button class="menu-button" >
-                            <b>about</b>
-                        </button>
-                    </a></li>
+            <div id="nav-container">
+                <a href="index.html">
+                    <img src="laptop-code.svg"id="home">
 
-
-                </ul>
-            </nav>
+                </a>
+                <nav>
+                    <ul>
+                        <li><a onclick="scrollToElement(1)">
+                            <button class="menu-button" >
+                                <b>projects</b>
+                            </button>
+                        <li><a onclick="scrollToElement(2)">
+                            <button class="menu-button" >
+                                <b>about</b>
+                            </button>
+                        </a></li>
+    
+    
+                    </ul>
+                </nav>
+            </div>
             <label class="switch">
                 <input type="checkbox">
                 <span class="slider"></span>
