--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <header class="header" id="header">
             <div id="nav-container">
-                <a href="index.html">
+                <a href="https://az0228.github.io/Portfolio/">
                     <img src="laptop-code.svg"id="home">
 
                 </a>
