--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </button>
                 </a>
             </div>
-            <img src="laptop.png" id="laptop" class="reveal1">
+            <img src="laptop2.png" id="laptop" class="reveal1">
         </div>
         <div class="projects" id="projects">
             <h1 class="reveal faster-reveal">here are my projects:</h1>
@@ -98,11 +98,13 @@
             </div>
         </div>
         <div class="about-me" id="about-me">
-            <h1 class="reveal faster-reveal">
+            <img src="laptop3.png" id="laptop1" class="reveal a">
+            <h1 class="reveal faster-reveal a">
                 about me:
             </h1>
             <div id="about-me-container">
-                <section id="about1" class="reveal">
+
+                <section id="about1" class="reveal a">
                     <p id="about-text" >
                         I'm a first year student at Rensselaer Polytechnic Institute studying computer science with experience in web design. I am experienced with:
                     </p>
