--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="animations.css">
         <script src="index.js"></script>
         <link rel="shortcut icon" type="image/png" href="laptop-code.svg"/>
 
@@ -21,8 +22,10 @@
     <body>
         
         <div class="teaser-image"></div>
-        <div class="teaser-image1"></div>
-
+        <div class="teaser-image1"></div> 
+        <div id="loader-screen">
+            <div class="loader"></div>
+        </div>
         <header class="header" id="header">
             <div id="nav-container">
                 <a href="https://az0228.github.io/Portfolio/">
