--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
         </div>
         <header class="header" id="header">
             <div id="nav-container">
-                <a href="https://az0228.github.io/Portfolio/">
-                    <img src="laptop-code.svg"id="home">
-
-                </a>
+                    <!--<img src="laptop-code.svg"id="home">-->
+                    <a class="loader1" href="https://az0228.github.io/Portfolio/"></a>
                 <nav>
                     <ul>
                         <li><a onclick="scrollToElement(1)">
