added mobile functionality

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
         <div class="hero">
-            <img src="hero-mobile.png" id="hero-mobile">
+            <img src="hero-mobile1.png" id="hero-mobile">
             <div class="hero-text">  
                 <h1 id="helloworld"></h1>
                 <h2>I'm James,</h2>
